--- a/package.json
+++ b/package.json
@@ -1,18 +1,29 @@
 {
-  "name": "react_recursion_exercise",
+  "name": "react_filter_exercise",
   "version": "1.0.0",
   "private": true,
   "devDependencies": {
-    "react-scripts": "1.0.7"
+    "react-scripts": "4.0.3"
   },
   "dependencies": {
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-redux": "^3.1.0",
-    "redux": "^3.3.1"
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-redux": "7.2.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
